@@ -1,12 +1,13 @@
 #! perl -w
 
+# http://triplefusion.net/system/macosx-clipboard
+
 # ----------------------------------------------------------------------
-#  File: macosx-clipboard
+#  File: macosx-clipboard-native
 # ----------------------------------------------------------------------
 # 
 # All portions of code are copyright by their respective author/s.
 # Copyright (c) 2006 Samuel Ljungkvist <salj@triplefusion.net>
-#               2009 Reza Jelveh <reza.jelveh@gmail.com>
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -29,26 +30,43 @@
 # URxvt.keysym.M-c: perl:macosx-clipboard:copy
 # URxvt.keysym.M-v: perl:macosx-clipboard:paste
 
-use Mac::Pasteboard;
+use Fcntl ();
+use Foundation;
 
-my $pasteboard = new Mac::Pasteboard;
+our $appkit = NSBundle->alloc->init->initWithPath_('/System/Library/Frameworks/AppKit.framework');
+$appkit->load if $appkit;
+
+if ($appkit->isLoaded) {
+   no strict 'refs';
+   for my $class (qw(NSPasteboard)) {
+      @{$class . '::ISA'} = 'PerlObjCBridge';
+   }
+} else {
+   undef $appkit;
+}
+
+our $pasteboard = NSPasteboard->generalPasteboard;
 
 sub copy {
    my ($self) = @_;
 
-   $pasteboard->clear;
-   $pasteboard->copy ($self->selection);
+   $pasteboard->declareTypes_owner_(NSArray->arrayWithObject_('NSStringPboardType'), undef);
+   $pasteboard->setString_forType_($self->selection, 'NSStringPboardType');
 
    ()
 }
 
 sub paste {
    my ($self) = @_;
+   my ($type, $str);
 
-   # $str = $pasteboard->stringForType_($type)->UTF8String;
-   my $str = $pasteboard->paste;
-   utf8::decode $str;
-   $self->tt_write ($self->locale_encode ($str));
+   $type = $pasteboard->availableTypeFromArray_(NSArray->arrayWithObject_('NSStringPboardType'));
+   if ($type->isEqual_('NSStringPboardType')){
+      $str = $pasteboard->stringForType_($type)->UTF8String;
+      $str =~ tr/\n/\r/;
+      utf8::decode($str);
+      $self->tt_write($self->locale_encode($str));
+   }
 
    ()
 }
